--- a/CommitePlace/appsettings.json
+++ b/CommitePlace/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-B0LUUR3;Initial Catalog=fci_cpd_DB;Integrated Security=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
