--- a/CommitePlace/appsettings.json
+++ b/CommitePlace/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-B0LUUR3;Initial Catalog=fci_cpd_DB;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-B0LUUR3;Initial Catalog=CommitDB;Integrated Security=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
